# OpenGLCourseApp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  template.cpp  template.h
Shaders/: shader.frag  shader.vert
src/: glad.c  main.cpp
src/Camera/: Camera.cpp  Camera.h
src/Mesh/: Mesh.cpp  Mesh.h
src/Shader/: Shader.cpp  Shader.h
src/Texture/: Texture.cpp  Texture.h
src/Window/: Window.cpp  Window.h
template/: template.cpp
